[tool.poetry]
name = "protech-eye-tracking"
version = "0.1.0"
description = "Analyse de données d'eye-tracking (fichiers TSV) et synchronisation vidéo."
authors = ["jeanne-boussonniere"]
readme = "README.md"
packages = [
    { include = "code.py" }
]

[tool.poetry.dependencies]
python = "^3.10" # Assurez-vous d'avoir Python 3.10 ou plus

pandas = "*"
openpyxl = "*"
moviepy = "*"
opencv-python = "*" 
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"